# index.js
@@ -3,7 +3,8 @@ const app = express()
 const mongoose = require('mongoose');
 const swaggerUi = require('swagger-ui-express');
 const yamljs = require('yamljs');
-const swaggerDocument = yamljs.load('./docs/swagger.yaml');
+const {processTransactions} = require('./middlewares')
+const swaggerDocument = yamljs.load('docs/swagger.yaml');
 
 
 require('dotenv').config()
@@ -15,13 +16,22 @@ app.use('/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 app.use(express.json())
 
 //Endpoints
+
+// TODO: Implement this later:
+app.use('/transactions/b2b', function (req, res){
+    console.log('Received incoming transfer request: ')
+    console.log('- Body:' + JSON.stringify(req.body))
+    res.send({receiverName: 'Malle Maasikas'})
+})
 app.use('/users', require('./routes/users'))
 app.use('/sessions', require('./routes/sessions'))
-
+app.use('/transactions', require('./routes/transactions'))
 
 mongoose.connect(process.env.MONGODB_URI, {}, function (){
     console.log('Connected to mongoDB')
 })
+
+processTransactions()
 
 app.listen(process.env.PORT, function () {
     console.log(`Listening on port ${process.env.PORT}`)
